# footing

./: .gitignore  Dockerfile  Dockerfile.postgres  Makefile  README.rst  build.sh  environment.yml  footing-0.1.7-py3-none-any.whl  footing-0.1.8-py3-none-any.whl  footing-1.0.0-py3-none-any.whl  footing.toml  install.sh  pyproject.toml
.footing/: config.py  config.yml  refs.yml
.footing/locks/: toolkit:default.yml
docker/actions/: Dockerfile  download.sh  start.sh
docker/core/: Dockerfile
docker/footing/: Dockerfile
docker/postgres/: Dockerfile
docker/runner/: Dockerfile
docs/: creating_templates.rst  package.rst  quick_start.rst
footing/: CONCEPTS  TODO  artifact.py  bootstrap.py  build.py  cast.py  check.py  clean.py  cli.py  config.py  constants.py  core.py  ctx.py  exceptions.py  ext.py  forge.py  func.py  init.py  job.py  k8s.py  ls.py  obj.py  ref.py  registry.py  self.py  setup.py  shell.py  sync.py  toolkit.py  tools.py  update.py  util.py  utils.py  workspace.py
footing/k8s/: __init__.py  core.py
footing/tests/: test_cast.py  test_cli.py  test_forge.py  test_setup.py  test_update.py
footing/tools/: __init__.py  core.py
install/: build.sh  footing-0.1.4-py3-none-any.whl  footing-0.1.5-py3-none-any.whl  footing-0.1.6-py3-none-any.whl  footing.whl  install.sh
