[build-system]
requires = ["poetry_core>=1.0.0"]
build-backend = "poetry.core.masonry.api"


[tool.black]
line-length = 99
target-version = ['py311']

[tool.coverage.run]
branch = true
source = ["footing"]

[tool.coverage.report]
exclude_lines = [
    "pragma: no cover",
    "raise AssertionError",
    "raise NotImplementedError",
    "pass",
    "pytest.mark.skip"
]
show_missing = true
fail_under = 100

[tool.poetry]
name = "footing"
packages = [
  { include = "footing" }
]
exclude = [
  "*/tests/"
]
version = "1.0.0"
description = ""
authors = ["Footing"]
classifiers = [
  "Intended Audience :: Developers",
  "Operating System :: OS Independent",
  "Programming Language :: Python",
  "Programming Language :: Python :: 3.11",
  "Programming Language :: Python :: 3 :: Only",
]
license = "BSD-3-Clause"
readme = "README.rst"
homepage = "https://github.com/FootingDev/footing"
repository = "https://github.com/FootingDev/footing"
documentation = "https://github.com/FootingDev/footing"

[tool.poetry.dependencies]
python = ">=3.11.0,<4"
shellingham = ">=1.5.0"
orjson = ">=3.8.5"
xxhash = ">=3.2.0"

[tool.poetry.dev-dependencies]
black = "22.12.0"

[tool.poetry.scripts]
footing = 'footing.cli:main'

[tool.pytest.ini_options]
xfail_strict = true
testpaths = "footing/tests"
norecursedirs = ".venv"
